--- a/index.html
+++ b/index.html
@@ -186,21 +186,18 @@
             </p>
 
             <form action="" class="d-flex gap-3 pt-2">
-              <input type="text" placeholder="Your email address" class="col-6 border-0 rounded-2 ps-3 py-3 outline-none" />
+              <input type="text" placeholder="Your email address" class="col-6 border-0 rounded-2 outline-none" />
               <button class="btn btn-dark px-3">Subscribe</button>
             </form>
           </div>
           <div class="col-4">
-            <img
-              src="./public/img/icons/mailbox-with-lowered-flag.png"
-              width="350"
-              alt="" />
+            <img src="./public/img/icons/mailbox-with-lowered-flag.png" width="350" alt="mailbox" />
           </div>
         </div>
       </div>
 
       <!-- ======================== FOOTER Links =============================== -->
-      <div class="footer-links m-auto row place-items-center justify-content-betwee" style="width: 1050px; margin: 0 auto;">
+      <div class="footer-links m-auto row place-items-center justify-content-betwee" style="width: 1050px;">
         <div class="main col-2">
           <img src="./public/img/icons/Group.png" alt="">
 
