compressed images using cwebp

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </li>
           </ul>
 
-          <img src="./public/img/icons/Logo.png" class="navbar-brand" alt="golobe -..." />
+          <img src="./public/img/icons/Logo.webp" class="navbar-brand" alt="golobe -..." />
 
           <ul class="nav align-items-center">
             <li><a href="#" class="me-5 text-white small">Login</a></li>
@@ -112,7 +112,7 @@
                     + Add Promo Code
                   </button>
                   <button class="ms-3 w-auto p-2 btn-green btn- rounded-1 small fw-bold">
-                    <img src="./public/img/icons/show-flight.png"  class="me-2" alt="flight" />
+                    <img src="./public/img/icons/show-flight.webp"  class="me-2" alt="flight" />
                     Show Flights
                   </button>
                 </div>
@@ -191,7 +191,7 @@
             </form>
           </div>
           <div class="col-4">
-            <img src="./public/img/icons/mailbox-with-lowered-flag.png" width="350" alt="mailbox" />
+            <img src="./public/img/icons/mailbox-with-lowered-flag.webp" width="350" alt="mailbox" />
           </div>
         </div>
       </div>
@@ -199,13 +199,13 @@
       <!-- ======================== FOOTER Links =============================== -->
       <div class="footer-links m-auto row place-items-center justify-content-betwee" style="width: 1050px;">
         <div class="main col-2">
-          <img src="./public/img/icons/Group.png" alt="">
+          <img src="./public/img/icons/Group.webp" alt="">
 
           <div class="d-flex gap-2">
-            <img src="./public/img/icons/akar-icons_facebook-fill.png" width="20" alt="">
-            <img src="./public/img/icons/akar-icons_twitter-fill.png" width="20" alt="">
-            <img src="./public/img/icons/akar-icons_youtube-fill.png" width="20" alt="">
-            <img src="./public/img/icons/ant-design_instagram-filled.png" width="20" alt="">
+            <img src="./public/img/icons/akar-icons_facebook-fill.webp" width="20" alt="">
+            <img src="./public/img/icons/akar-icons_twitter-fill.webp" width="20" alt="">
+            <img src="./public/img/icons/akar-icons_youtube-fill.webp" width="20" alt="">
+            <img src="./public/img/icons/ant-design_instagram-filled.webp" width="20" alt="">
           </div>
         </div>
 
