--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Flight B.</title>
       <meta name="description" content="Some idea of how the functionality of a flight booking app works">
     <meta name="author" content="benjamin">
-    <link rel="preload" as="style" href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
+    <!-- <link rel="preload" as="style" href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
       onload="this.onload=null;this.rel='stylesheet'" />
     <noscript>
       <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css" />
-    </noscript>
+    </noscript> -->
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -202,10 +202,10 @@
           <img src="./public/img/icons/Group.webp" alt="">
 
           <div class="d-flex gap-2">
-            <img src="./public/img/icons/akar-icons_facebook-fill.webp" width="20" alt="">
-            <img src="./public/img/icons/akar-icons_twitter-fill.webp" width="20" alt="">
-            <img src="./public/img/icons/akar-icons_youtube-fill.webp" width="20" alt="">
-            <img src="./public/img/icons/ant-design_instagram-filled.webp" width="20" alt="">
+            <img src="./public/img/icons/akar-icons_facebook-fill.png" width="20" alt="">
+            <img src="./public/img/icons/akar-icons_twitter-fill.png" width="20" alt="">
+            <img src="./public/img/icons/akar-icons_youtube-fill.png" width="20" alt="">
+            <img src="./public/img/icons/ant-design_instagram-filled.png" width="20" alt="">
           </div>
         </div>
 
