--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Flight B.</title>
       <meta name="description" content="Some idea of how the functionality of a flight booking app works">
     <meta name="author" content="benjamin">
-    <!-- <link rel="preload" as="style" href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
+    <link rel="preload" as="style" href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
       onload="this.onload=null;this.rel='stylesheet'" />
     <noscript>
       <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css" />
-    </noscript> -->
+    </noscript>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
