err in accounts

--- a/html/accounts.html
+++ b/html/accounts.html
@@ -4,8 +4,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <title>accounts</title>
+  <meta name="description" content="account manager">
+  <meta name="author" content="benjamin">
+  <link rel="preload" as="style" href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
+    onload="this.onload=null;this.rel='stylesheet'" />
+  <noscript>
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+  </noscript>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-  
+  <main role="accounts-manager">
+    <nav class="nav navbar navbar-expand-xlg py-4 px-5">
+      <ul class="nav gap-5">
+        <li>
+          <img src="../public/img/icons/Vector (2).png" alt="" />
+          <a href="#" class="fw-medium small text-white">Find Flights</a>
+        </li>
+        <li>
+          <img src="../public/img/icons/Vector (4).png" alt="" />
+          <a href="#" class="fw-medium small text-white">Find Stays</a>
+        </li>
+      </ul>
+
+      <img src="../public/img/icons/Logo-dark.png" class="navbar-brand" alt="golobe -..." />
+
+      <ul class="nav align-items-center">
+        <li><a href="#" class="me-5 text-white small">Login</a></li>
+        <li>
+          <a href="#" class="small btn fw-medium bg-white" role="button">Sign up</a>
+        </li>
+      </ul>
+    </nav>
+  </main>
 </body>
 </html>
