--- a/html/accounts.html
+++ b/html/accounts.html
@@ -12,7 +12,7 @@
   <noscript>
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
   </noscript>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/account.css">
 </head>
 <body>
   <main role="accounts-manager">
