--- a/html/accounts.html
+++ b/html/accounts.html
@@ -16,27 +16,31 @@
 </head>
 <body>
   <main role="accounts-manager">
-    <nav class="nav navbar navbar-expand-xlg py-4 px-5">
+    <nav class="nav navbar shadow py-4 px-5 bg-white w-100">
       <ul class="nav gap-5">
         <li>
           <img src="../public/img/icons/Vector (2).png" alt="" />
-          <a href="#" class="fw-medium small text-white">Find Flights</a>
+          <a href="#" class="fw-medium small text-dark">Find Flights</a>
         </li>
         <li>
           <img src="../public/img/icons/Vector (4).png" alt="" />
-          <a href="#" class="fw-medium small text-white">Find Stays</a>
+          <a href="#" class="fw-medium small text-dark">Find Stays</a>
         </li>
       </ul>
 
       <img src="../public/img/icons/Logo-dark.png" class="navbar-brand" alt="golobe -..." />
 
       <ul class="nav align-items-center">
-        <li><a href="#" class="me-5 text-white small">Login</a></li>
+        <li><a href="#" class="me-5 text-dark small text-decoration-none fw-bold">Login</a></li>
         <li>
-          <a href="#" class="small btn fw-medium bg-white" role="button">Sign up</a>
+          <a href="#" class="small btn fw-medium bg-dark text-white px-3 rounded-2" role="button">Sign up</a>
         </li>
       </ul>
     </nav>
+
+    <section class="flights-body">
+      
+    </section>
   </main>
 </body>
 </html>
