--- a/html/accounts.html
+++ b/html/accounts.html
@@ -38,8 +38,11 @@
       </ul>
     </nav>
 
-    <section class="flights-body">
-      
+    <section class="flights-body d-flex align-items-center justify-content-start" style="height: 70vh;">
+     <div class="content h-auto mx-auto">
+        <h1 class="display-4 fw-bolder">Make your travel <br> wishlist,  we'll do <br> the rest</h1>
+        <p class="lead fs-4 fw-medium">Special offers to suit your plan</p>
+     </div>
     </section>
   </main>
 </body>
