--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="benjamin">
     <link rel="preload" as="style" href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
       onload="this.onload=null;this.rel='stylesheet'" />
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" integrity="sha512-b2QcS5SsA8tZodcDtGRELiGv5SaKSk1vDHDaQRda0htPYWZ6046lr3kJ5bAAQdpV2mmA/4v0wQF9MyU6/pDIAg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <noscript>
       <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css" />
     </noscript>
